# mtuci-rs

./: Cargo.toml
Todo/: Cargo.toml
Todo/src/: Todo.rs  chat_2023_07_28_22_24_44.md  todo.rs
hw1/FizzBuzz/: fizz_bizz.rs
hw1/rustlings/: quiz1.rs
hw1/rustlings/functions/: functions3.rs
hw1/rustlings/if/: if1.rs  if2.rs
hw1/rustlings/primitive_types/: primitive_types2.rs  primitive_types3.rs
hw1/rustlings/variables/: variables2.rs  variables3.rs  variables6.rs
hw2/rustlings/enums/: enums2.rs  enums3.rs
hw2/rustlings/move_semantics/: move_semantics2.rs  move_semantics3.rs  move_semantics6.rs
hw2/rustlings/structs/: structs1.rs  structs2.rs  structs3.rs
hw2/rustlings/vecs/: vecs1.rs  vecs2.rs
hw2/task/: Cargo.toml
hw2/task/src/: task1.rs  task2.rs
hw_4/: Cargo.toml
hw_4/src/: main.rs
rustbook/ch1/: Cargo.toml
rustbook/ch2/: Cargo.toml
rustbook/ch2/src/: game.rs
rustbook/ch3/: Cargo.toml
rustbook/ch3/src/: control_flow.rs  data_types.rs  functions.rs  shadowing.rs  variables.rs
rustbook/ch4/: Cargo.toml
rustbook/ch4/src/: main.rs  ref_bor.rs  slice_type.rs
