[package]
name = "fizz_buzz"
version = "1.70.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"