[package]
name = "ch4"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "ref_bor"
path = "src/ref_bor.rs"

[[bin]]
name = "slice_type.rs"
path = "src/slice_type.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]